2002-01-08  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* texi/gnus-ja.texi (Web Newspaper): Update the document of
	mime-w3m.el.

2002-01-08  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-art.el (article-toggle-headers): Expose headers even
	if there is a boundary line.

	* lisp/nntp.el (nntp-send-buffer): Don't use
	`mm-with-unibyte-current-buffer'.  Use expanded form instead.

	* lisp/gnus-art.el (gnus-treatment-function-alist): Move X-Face
	stuff down after unfolding stuff.

2002-01-08  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/gnus-namazu.el (gnus-namazu/highlight-words): Reimplemented.

2002-01-08  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nnheader.el (mail-narrow-to-head): Copy from ietf-drums.el;
	it should go to the beginning of the header after narrowing.
	(std11-extract-addresses-components): Protect against nil argument.

2002-01-08  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nnheader.el (mail-header-field-value): Alias to
	`std11-field-value'.
	(std11-field-value): New function.

2002-01-08  Akihiro Arisawa  <ari@atesoft.advantest.co.jp>

	* lisp/nnheader.el (mail-header-parse-addresses): New function.
	(std11-extract-addresses-components): New function.

2002-01-07  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-picon.el: Don't require `mail-parse'.

2002-01-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/nnheader.el (mail-header-fold-field): Alias to
	`std11-fold-field'.
	(std11-fold-field): New function.
	(mail-narrow-to-head): Alias to `std11-narrow-to-header'.
	(mail-header-narrow-to-field): Alias to `std11-narrow-to-field'.
	(std11-narrow-to-field): New function.

2002-01-07  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el: T-gnus 6.15.5 revision 00.

2002-01-02  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* etc/gnus/describe-group.xpm: Set pixels of first line to
	background color. A bug in Emacs?

2002-01-07  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 10.
